<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PracticalParentApp</string>
    <string name="timeout_txt">Timeout Timer</string>
    <string name="flip_coin_txt">Flip A Coin</string>
    <string name="configure_children_txt">Configure Children</string>
    <string name="child_name">Child name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="what_is_your_child_s_name">What is your child\'s name?</string>
    <string name="add_child">Add Child</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="_00_00">00:00</string>
    <string name="reset">reset</string>
    <string name="enter_number_custom">Enter the time (in whole number minutes) that you wish to set:</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
    <string name="custom">Custom</string>
    <string name="tap_to_flip_coin">Flip the coin</string>
    <string name="heads_side_of_coin">Heads side of coin</string>
    <string name="enter_pos_string">Enter the positions of your kids:<br />
        Ex. Child #1 would be position 1.<br />
        Press confirm, then pick heads/tails.</string>
    <string name="ask_child">Child _, choose heads or tails, then press "FLIP THE COIN"</string>
    <string name="heads">HEADS</string>
    <string name="tails">TAILS</string>
    <string name="confirm">Confirm</string>
    <string name="white_box_msg">White box for user clarity</string>
    <string name="created_by_daniel_danny_emmanuel_and_tej">Created by Daniel, Danny, Emmanuel, and Tejeshwar</string>
    <string name="practical_parent_app">Practical Parent App</string>
    <string name="title_activity_to_do">activity_to_do</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save_picture">Save picture</string>
    <string name="change_child">Change Child</string>
    <string name="confirm_change">Confirm Change</string>
    <string name="coin_flip_queue_instructions">Enter the position of the child to go next. (Same position as initially configured)</string>
    <string name="help_screen">Help Screen</string>
    <string name="copyright_information">Copyright Information</string>
    <string name="the_developers">The Developers</string>
    <string name="dev_info_text" tools:ignore="TypographyDashes">
        Our team name is 276-2021-7-Iron. The developers are Daniyal Nussipakynov, Tejeshwar Multani, Daniel Nguyen, and Emmanuel Ekene Okonkwo.</string>
    <string name="citations_info_text">
        Heads/Tails Coin: https://www.shutterstock.com/search/coin+heads+tails \n<br />
        Wallpaper 1: https://www.pinterest.ca/sa3717171/baby-blue-wallpaper/ \n<br />
        Wallpaper 2: https://www.pinterest.ca/pin/817614507349568393/ \n<br />
        Wallpaper 3: https://www.pexels.com/photo/blue-sky-281260/ \n<br />
        Wallpaper 4: https://all-free-download.com/free-vector/download/abstract_background_266991.html \n<br />
        Relax Icon: https://www.pngitem.com/middle/woowT_person-silhouette-in-posture-icono-relax-png-transparent/ </string>
    <string name="history_text">History Text</string>
    <string name="clear_history">Clear History</string>
    <string name="tasks">Tasks</string>
    <string name="enter_task">Enter Task</string>
    <string name="confirm_turn">Confirm Turn</string>
    <string name="remove_task">Remove Task</string>
    <string name="cancel">Cancel</string>
    <string name="ntextview">\nTextView</string>
    <string name="enter_child">Enter Child</string>
    <string name="add_task">Add Task</string>
    <string name="the_task">The_Task</string>
    <string name="textview1" tools:ignore="Typos">TextView1</string>
    <string name="child_text_view">The_Child</string>
    <string name="n_n_n_n_n_n_n_nno_tasks_added_yet_n_nplease_click_on_the_add_task_n_button_to_add_and_assign_a_task_n_to_a_child">\n\n\n\n\n\n\n\nNo Tasks Added Yet.\n\nPlease, click on the Add Task\n Button to add and assign a task\n to a child</string>
    <string name="take_a_breath">Take a Breath</string>
    <string name="how_many_breaths">How many breaths? \n<br /> (enter 1–10)</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="time_100">Time @100%</string>
    <string name="inhale_txt">Breath in while holding the \'In\' button</string>
    <string name="exhale_txt">Now breathe out while holding the \'Out\' button</string>
    <string name="ask_more_txt">Would you like to take more breaths?</string>
    <string name="task_name">Task Name</string>
    <string name="name_of_child">Name of Child</string>
    <string name="date_of_completion">date of completion</string>
    <string name="add_task" tools:ignore="DuplicateDefinition">Add Task</string>
    <string name="history">History</string>
    <string name="no_task_text">\n\n\n\n\n\n\n\nNo Tasks Added Yet.\n\nPlease, click on the Add Task\n Button to add and assign a task\n to a child</string>
</resources>