<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_w"
    tools:context=".UI.TaskAdder">

    <EditText
        android:id="@+id/editChildName"
        android:layout_width="393dp"
        android:layout_height="94dp"
        android:ems="10"
        android:hint="@string/enter_task"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editChildTask"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/enter_child"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editChildName"
        app:layout_constraintVertical_bias="0.156"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/confirmTask"
        android:layout_width="136dp"
        android:layout_height="63dp"
        android:text="@string/confirm"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editChildTask"
        app:layout_constraintVertical_bias="0.157" />
</androidx.constraintlayout.widget.ConstraintLayout>