<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".UI.NewChildActivity">

    <EditText
        android:id="@+id/child_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_is_name"
        app:layout_constraintVertical_bias="0.09"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/what_is_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_child_s_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/child_name_input"
        app:layout_constraintVertical_bias="0.595" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/child_name_input"
        app:layout_constraintVertical_bias="0.976"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageViewNewChildActivityProfilePicture"
        android:layout_width="107dp"
        android:layout_height="168dp"
        android:layout_gravity="center"

        android:src="@drawable/ic_profile_picture"
        app:layout_constraintBottom_toTopOf="@+id/delete_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/child_name_input"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/imageViewNewChildActivityProfilePictureSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/save_picture"
        app:layout_constraintBottom_toTopOf="@+id/delete_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewNewChildActivityProfilePicture"
        app:layout_constraintTop_toBottomOf="@+id/child_name_input"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>