<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".UI.MainMenu"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="33dp">

    <Button
        android:id="@+id/flipCoinBtn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="276dp"
        android:backgroundTint="@color/white"
        android:text="@string/flip_coin_txt"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configureChildrenBtn"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/configureChildrenBtn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white"
        android:text="@string/configure_children_txt"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318" />

    <ImageView
        android:id="@+id/addImg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/flipImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/configureChildrenBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917"
        app:srcCompat="@android:drawable/ic_menu_add"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <Button
        android:id="@+id/timeoutBtn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white"
        android:text="@string/timeout_txt"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flipCoinBtn"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/timeImg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/timeoutBtn"
        app:layout_constraintTop_toBottomOf="@+id/flipImg"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/flipImg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/flipCoinBtn"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuTitle"
        app:layout_constraintVertical_bias="0.349"
        app:srcCompat="@drawable/heads"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:text="@string/practical_parent_app"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/help_screen_btn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:text="@string/help_screen"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeoutBtn"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/help_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/help_screen_btn"
        app:layout_constraintTop_toBottomOf="@+id/timeImg"
        app:srcCompat="@android:drawable/ic_menu_help"
        tools:ignore="ContentDescription,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>